Fixing font size for summary on mobile.

--- a/css/resume.scss
+++ b/css/resume.scss
@@ -163,6 +163,7 @@ body {
 
 .description, .links {
   margin-top: .25em;
+  font-size: 1rem;
 }
 
 @media print {
